# LibreShockwave

./: .gitignore  ARCHITECTURE.md  BUGS.md  CLAUDE.md  CMakeLists.txt  CONTINUE.md  GOAL.md  MESSENGER_BUG.md  PORTING_GUIDE.md  QUICK_START.md  README.md  TestLoad.java  TmpCastInfo.java  build.gradle  build.sh  fuse_client.cst  magic-constants-audit.md  run_test.bat  serve-player.bat  serve-player.sh  settings.gradle  test_ls.js
cpp/: CMakeLists.txt  PORT_PROGRESS.md
cpp/apps/editor/: DirectorStudio.cpp  EditorApp.cpp  EditorApp.hpp  EditorContext.cpp  EditorContext.hpp  EditorModels.cpp  EditorModels.hpp  EditorPreferences.cpp  EditorPreferences.hpp  EditorStyle.cpp  EditorStyle.hpp  ExternalParamsDialog.cpp  ExternalParamsDialog.hpp  MainWindow.cpp  MainWindow.hpp  StartScreenDialog.cpp  StartScreenDialog.hpp  main.cpp
cpp/apps/player/: NativePlayer.cpp
cpp/apps/tools/: RenderProbe.cpp  WasmBridgeProbe.cpp
cpp/apps/tools/ts/: ExportTsProbe.cpp
cpp/apps/wasm/: WasmBridge.cpp
cpp/cmake/: GeneratePlatformFontData.cmake  GenerateVolterData.cmake  libreshockwave-wasm-exports.json
cpp/include/libreshockwave/: DirectorFile.hpp  W3DFile.hpp
cpp/include/libreshockwave/audio/: SoundConverter.hpp
cpp/include/libreshockwave/bitmap/: Bitmap.hpp  BitmapColorizer.hpp  BitmapDecoder.hpp  ColorRef.hpp  Drawing.hpp  GifDecoder.hpp  Palette.hpp  PngDecoder.hpp
cpp/include/libreshockwave/cast/: BitmapInfo.hpp  CastMember.hpp  FilmLoopInfo.hpp  MemberType.hpp  ScriptType.hpp  ShapeInfo.hpp  Shockwave3DInfo.hpp  StyledSpan.hpp  TextInfo.hpp  XmedStyledText.hpp  XmedTextParser.hpp
cpp/include/libreshockwave/chunks/: BitmapChunk.hpp  CastChunk.hpp  CastListChunk.hpp  CastMemberChunk.hpp  Chunk.hpp  ConfigChunk.hpp  FontMapChunk.hpp  FrameLabelsChunk.hpp  KeyTableChunk.hpp  MediaChunk.hpp  PaletteChunk.hpp  RawChunk.hpp  ScoreChunk.hpp  ScriptChunk.hpp  ScriptContextChunk.hpp  ScriptNamesChunk.hpp  SoundChunk.hpp  TextChunk.hpp
cpp/include/libreshockwave/editor/: AppModels.hpp  EditorContextModels.hpp  EditorFrameModels.hpp  EditorShellModels.hpp
cpp/include/libreshockwave/font/: BdfParser.hpp  BitmapFont.hpp  Pfr1Font.hpp  Pfr1TtfConverter.hpp  PfrBitReader.hpp  TtfBitmapRasterizer.hpp
cpp/include/libreshockwave/fonts/: FontDataDecoder.hpp  PlatformFonts.hpp
cpp/include/libreshockwave/format/: AfterburnerReader.hpp  ChunkInfo.hpp  ChunkType.hpp  MoaID.hpp  ScriptFormatUtils.hpp
cpp/include/libreshockwave/id/: Ids.hpp
cpp/include/libreshockwave/io/: BinaryReader.hpp
cpp/include/libreshockwave/lingo/: Datum.hpp  LingoValueParser.hpp  Opcode.hpp
cpp/include/libreshockwave/lookup/: CastMemberLookup.hpp  PaletteResolver.hpp  ScriptLookup.hpp
cpp/include/libreshockwave/player/: BitmapResolver.hpp  CursorManager.hpp  ExternalCastLoadEvent.hpp  ExternalCastLoadHandler.hpp  InputHandler.hpp  MovieProperties.hpp  Player.hpp  PlayerEvent.hpp  PlayerEventInfo.hpp  PlayerState.hpp  SpriteProperties.hpp
cpp/include/libreshockwave/util/: AudioCodecUtils.hpp  FileUtil.hpp  StringUtils.hpp
cpp/include/libreshockwave/w3d/: W3DEntry.hpp  W3DEntryType.hpp  W3DMaterial.hpp  W3DMeshResource.hpp  W3DNode.hpp  W3DResourceRef.hpp  W3DShape.hpp  W3DTexture.hpp
cpp/src/: DirectorFile.cpp  W3DFile.cpp
cpp/src/audio/: SoundConverter.cpp
cpp/src/bitmap/: Bitmap.cpp  BitmapColorizer.cpp  BitmapDecoder.cpp  BitmapProcessing.hpp  ColorRef.cpp  Drawing.cpp  GifDecoder.cpp  Palette.cpp  PngDecoder.cpp
cpp/src/cast/: BitmapInfo.cpp  CastMember.cpp  FilmLoopInfo.cpp  MemberType.cpp  ScriptType.cpp  ShapeInfo.cpp  Shockwave3DInfo.cpp  TextInfo.cpp  XmedStyledText.cpp  XmedTextParser.cpp
cpp/src/chunks/: BitmapChunk.cpp  CastChunk.cpp  CastListChunk.cpp  CastMemberChunk.cpp  ConfigChunk.cpp  FontMapChunk.cpp  FrameLabelsChunk.cpp  KeyTableChunk.cpp  MediaChunk.cpp  PaletteChunk.cpp  RawChunk.cpp  ScoreChunk.cpp  ScriptChunk.cpp  ScriptContextChunk.cpp  ScriptNamesChunk.cpp  SoundChunk.cpp  TextChunk.cpp
cpp/src/editor/: AppModels.cpp  EditorContextModels.cpp  EditorFrameModels.cpp  EditorShellModels.cpp
cpp/src/editor/audio/: EditorAudioModels.cpp
cpp/src/editor/cast/: CastBrowserModels.cpp
cpp/src/editor/debug/: DebugBrowserModels.cpp  DebugCommandModels.cpp  DebugDisplayItems.cpp  DebugInspectionModels.cpp  DebugTableModels.cpp
cpp/src/editor/docking/: DockingModels.cpp
cpp/src/editor/extraction/: AssetExtractor.cpp  ExportHandlerModels.cpp
cpp/src/editor/format/: ChannelNames.cpp  InstructionFormatter.cpp  PaletteDescriptions.cpp
cpp/src/editor/gtk/: EditorGtkMain.cpp  EditorGtkModels.cpp
cpp/src/editor/model/: BitmapKey.cpp  FileNode.cpp  MemberNodeData.cpp  ScoreCellData.cpp
cpp/src/editor/panels/: EditorPanelCatalog.cpp  EditorPanelModels.cpp
cpp/src/editor/preview/: GenericPreview.cpp  PalettePreview.cpp  PreviewContextModels.cpp  PreviewFormatUtils.cpp  ScriptPreview.cpp  SoundPreview.cpp  TextPreview.cpp
cpp/src/font/: BdfParser.cpp  BitmapFont.cpp  Pfr1Font.cpp  Pfr1TtfConverter.cpp  PfrBitReader.cpp  TtfBitmapRasterizer.cpp
cpp/src/fonts/: FontDataDecoder.cpp
cpp/src/format/: AfterburnerReader.cpp  ChunkType.cpp  MoaID.cpp  ScriptFormatUtils.cpp
cpp/src/io/: BinaryReader.cpp
cpp/src/lingo/: Datum.cpp  LingoValueParser.cpp  Opcode.cpp
cpp/src/lookup/: CastMemberLookup.cpp  PaletteResolver.cpp  ScriptLookup.cpp
cpp/src/player/: BitmapResolver.cpp  CursorManager.cpp  InputHandler.cpp  MovieProperties.cpp  Player.cpp  PlayerEvent.cpp  PlayerState.cpp  SpriteProperties.cpp
cpp/src/util/: AudioCodecUtils.cpp  FileUtil.cpp  StringUtils.cpp
cpp/src/w3d/: W3DEntry.cpp  W3DEntryType.cpp  W3DMaterial.cpp  W3DMeshResource.cpp  W3DNode.cpp  W3DResourceRef.cpp  W3DShape.cpp  W3DTexture.cpp
cpp/tests/: editor_model_test.cpp  sdk_foundation_test.cpp
cpp/tools/: DirectorProbe.cpp  ProbeFixtureRoots.hpp  RenderProbe.cpp  WasmBridgeProbe.cpp  browser_fixture_check.js  browser_index_check.js  package.json
cpp/wasm/: WasmBridge.cpp
cpp/web/: index.html  libreshockwave-cpp-player.js  libreshockwave-cpp-worker.js  ws-tcp-proxy.cjs
(+949 files in other folders)
